new update of bug fixing

--- a/src/main/resources/static/css/stylee.css
+++ b/src/main/resources/static/css/stylee.css
@@ -25,7 +25,7 @@ p{margin: 0;}
 .user-pic img{width: 98px; height: 98px; border-radius: 98px; border: 2px solid #fff; display: block; margin: 0 auto;}
 .user-details{width: 700px; float: left; margin-top: 25px;}
 .user-block{float: left; width: 210px; margin-right: 20px;}
-.text-title{color: #9599E2; font-size: 13px; line-height: 18px; letter-spacing: 0.5px; text-transform: uppercase;}
+.text-title{color: #b8f1f5; font-size: 13px; line-height: 18px; letter-spacing: 0.5px; text-transform: uppercase;}
 .text-desc{color: #fff; font-weight: 500; font-size: 18px; line-height: 24px;}
 
 .user-marks{padding: 20px 0px 19px 20px; background-color: #fff; border-radius: 10px; border: 1px solid #EBEBEB;}
